Corrige ação editar de uma Questão